--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,17 @@
 
 /* Your CSS Code here. */
+div{
+	height:100vh;
+	width:100vw;
+	background-color:peachpuff;
+}
+figure{
+	text-align:center;
+	color:purple;
+	font-size:18px;
+	font-weight:bold;
+}
+img{
+	width:20rem;
+	margin-top:2rem;
+}
